Update index.html: Add inline-bold class to project report links for improved emphasis and consistency

--- a/index.html
+++ b/index.html
@@ -773,8 +773,8 @@
                 <p class="service-item-text">
                   In this collaborative project, I explored and implemented various data selection (influence scores, etc.) 
                   and fine-tuning strategies (LoRA, BitFit, iA3) from scratch to adapt the pre-trained chemical language model, MoLFormer, 
-                  to the regression task of predicting lipophilicity values of the MoleculeNet Lipophilicity dataset.
-                  <a href="https://drive.google.com/file/d/1EgFVFjdQHIvPeh1Y-HfduutmpiXVqHvS/view?usp=drive_link" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
+                  to the regression task of predicting lipophilicity values of the MoleculeNet Lipophilicity dataset. <br>
+                  <a href="https://drive.google.com/file/d/1EgFVFjdQHIvPeh1Y-HfduutmpiXVqHvS/view?usp=drive_link" target="_blank" class="inline-bold">Link to the project report.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
@@ -789,8 +789,8 @@
                 <p class="service-item-text">
                   In this collaborative project, I explored emotion classification from films using low-level audio-visual features instead of EEG signals. Using datasets like 
                   DREAMER, XGBoost models predicted Arousal and Valence with notable accuracy in LOSO validation, showing the potential of low-level features for 
-                  emotion recognition.
-                  <a href="https://drive.google.com/file/d/1QEvUl5G0Xy59KbmJ7eXyuU8FKgzwhG2R/view?usp=sharing" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
+                  emotion recognition.<br>
+                  <a href="https://drive.google.com/file/d/1QEvUl5G0Xy59KbmJ7eXyuU8FKgzwhG2R/view?usp=sharing" target="_blank" class="inline-bold">Link to the project report.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
@@ -805,8 +805,8 @@
 
                 <p class="service-item-text">
                   In this collaborative project, I explored self-supervised learning for urban scene segmentation in low-visibility conditions, evaluating U-Net and 
-                  DeepLabv3 models on Cityscapes and Foggy Cityscapes. Achieved accuracy comparable to fully supervised methods with less labeled data.
-                  <a href="https://drive.google.com/file/d/12okqkS-mvMyeokPa6HhIOjLo8h6kxE7m/view?usp=drive_link" target="_blank" style="color:white; font-weight: bold;">Link to the project report.</a>
+                  DeepLabv3 models on Cityscapes and Foggy Cityscapes. Achieved accuracy comparable to fully supervised methods with less labeled data.<br>
+                  <a href="https://drive.google.com/file/d/12okqkS-mvMyeokPa6HhIOjLo8h6kxE7m/view?usp=drive_link" target="_blank" class="inline-bold">Link to the project report.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
@@ -819,8 +819,8 @@
                 <h4 class="h4 service-item-title">EIGEN - A renderer based on physically based rendering</h4>
 
                 <p class="service-item-text">
-                  In this collaborative project, I built a rendering engine using the Lightwave framework.
-                  <a href="https://anchitgupta22.github.io/eigen-renderer/" target="_blank" style="color:white; font-weight: bold;">Link to the project webpage.</a>
+                  In this collaborative project, I built a rendering engine using the Lightwave framework.<br>
+                  <a href="https://anchitgupta22.github.io/eigen-renderer/" target="_blank" class="inline-bold">Link to the project webpage.</a>
                 </p>
                 <p class="project-category">Graduate</p>
               </div>
@@ -866,8 +866,8 @@
                   In this project, I built a system capable of tracking any violation of social distancing and mask norms. It 
                   captures the facial identity of the violator to perform facial recognition if needed. It also creates a dashboard of 
                   the captured statistics. The system uses perspective transformation to get a better accuracy while detecting social 
-                  distancing violations.
-                  <a href="https://github.com/AnchitGupta22/COVID-Safety-Tracker" target="_blank" style="color:white; font-weight: bold;">Link to the project webpage.</a>
+                  distancing violations.<br>
+                  <a href="https://github.com/AnchitGupta22/COVID-Safety-Tracker" target="_blank" class="inline-bold">Link to the project webpage.</a>
                 </p>
 
                 <p class="project-category">Under-graduate</p>
